left align header for all smaller breakpoints Resolves #19

--- a/_assets/stylesheets/components/_jumbotron.scss
+++ b/_assets/stylesheets/components/_jumbotron.scss
@@ -18,20 +18,14 @@
 
   & span {
     background-color: $red;
-    padding: 0 1rem;
+    padding: 0 1rem .5rem;
   }
 
-  &.header-text-xs-l {
+  &.header-text-l {
     & span {
       display: inline;
       box-decoration-break: clone;
       -webkit-box-decoration-break: clone;
-    }
-
-    @media (min-width: $screen-md) {
-      & span {
-        display: block;
-      }
     }
   }
 }
